crates/synd_api/src/repository/sqlite/snapshots/synd_api__repository__sqlite__tests__create.snap
---
source: crates/synd_api/src/repository/sqlite/mod.rs
expression: feeds
---
urls:
  - "https://ymgyt.io/feed_1"
  - "https://ymgyt.io/feed_2"
annotations:
  "https://ymgyt.io/feed_1":
    requirement: Must
    category: rust
  "https://ymgyt.io/feed_2":
    requirement: Should
    category: linux
